# aoc

./: .gitignore
2018/cxx/: CMakeLists.txt
2018/cxx/day1/: CMakeLists.txt
2018/cxx/day1/src/: a.cpp  b.cpp
2018/cxx/day2/: CMakeLists.txt
2018/cxx/day2/src/: day2a.cpp  day2b.cpp
2018/cxx/day3/: CMakeLists.txt
2018/cxx/day3/src/: day3a.cpp  day3b.cpp
2018/cxx/day4/: CMakeLists.txt
2018/cxx/day4/src/: day4a.cpp  day4b.cpp
2018/cxx/day5/: CMakeLists.txt
2018/cxx/day5/src/: day5a.cpp  day5b.cpp
2018/cxx/day6/: CMakeLists.txt
2018/cxx/day6/src/: day6a.cpp
2018/cxx/day7/: CMakeLists.txt
2018/cxx/day7/src/: day7a.cpp
2020/cxx/: CMakeLists.txt
2020/cxx/day01/: CMakeLists.txt
2020/cxx/day01/src/: day01.cpp  day01a.cpp
2020/cxx/day02/: CMakeLists.txt
2020/cxx/day02/src/: day02.cpp
2020/cxx/day03/: CMakeLists.txt
2020/cxx/day03/src/: day03.cpp
2020/cxx/day04/: CMakeLists.txt
2020/cxx/day05/: CMakeLists.txt
2020/cxx/day06/: CMakeLists.txt
2020/cxx/day08/: CMakeLists.txt
2020/cxx/day09/: CMakeLists.txt
2020/cxx/day11/: CMakeLists.txt
2020/cxx/day12/: CMakeLists.txt
2020/cxx/day12/src/: day12.cpp
2020/cxx/day13/: CMakeLists.txt
2020/cxx/day14/: CMakeLists.txt
2020/cxx/day15/: CMakeLists.txt
2020/cxx/day16/: CMakeLists.txt
2020/cxx/day17/: CMakeLists.txt
2020/cxx/day18/: CMakeLists.txt
2020/cxx/day19/: CMakeLists.txt
2020/cxx/day20/: CMakeLists.txt
2020/cxx/day20/src/: day20.cpp
2021/sca/: .gitignore  settings.gradle
2021/sca/day01/: build.gradle
2021/sca/day02/: build.gradle
(+20 files in other folders)
